UTILITIES: adding initial commit for the utilities folder/library. Initial code for the C++11 thread wrapper was added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@
 
 cmake_minimum_required(VERSION 3.5)
 
+# Add/customize global project settings:
 project(myHttpServer)
-
 message(STATUS "main CMakeLists.txt of ${CMAKE_PROJECT_NAME}")
-
 set(CMAKE_CXX_STANDARD 17)
+message(STATUS "main CMakeLists.txt of ${CMAKE_PROJECT_NAME} - the PROJECT_SOURCE_DIR is set to:${PROJECT_SOURCE_DIR}")
 
 # In case the application is to be built as a 32-bit application, un-comment the below
 #set(CMAKE_CXX_FLAGS "-m32")
@@ -16,6 +16,6 @@ include_directories(src)
 
 add_subdirectory(src)
 
-#add_subdirectory(sampleObj1Lib)
+add_subdirectory(${PROJECT_SOURCE_DIR}/src/utilities/cpp11ThreadWrapper)
 
 #add_subdirectory(test)
