--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,11 +8,13 @@ message(STATUS "CMakeLists.txt of ${exeName} executable")
 # Add the executable which is of now, composed ONLY from the main.cpp
 add_executable(${exeName} main.cpp)
 
-target_link_libraries(${exeName} PUBLIC cpp11ThreadWrapperLib)
+# Link the executable with all relevant libraries
+target_link_libraries(${exeName} PUBLIC infraLib dataBaseManagerLib)
 
 # Add the binary tree to the search path for include files
 # so that we will find sampleObj1.h
 target_include_directories(${exeName} PUBLIC
                           "${PROJECT_BINARY_DIR}"
-                          "${PROJECT_SOURCE_DIR}/src/utilities/cpp11ThreadWrapper/include"
+                          "${PROJECT_SOURCE_DIR}/src/infra/include"
+                          "${PROJECT_SOURCE_DIR}/src/cacheManager/include"
                           )
