--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 # CMakeLists.txt file for the main application (executable)
 # =========================================================
-
 set(exeName "myHttpServer.out")
-
+include(../globalDefines.cmake)
 message(STATUS "CMakeLists.txt of ${exeName} executable")
 
 # Add the executable which is of now, composed ONLY from the main.cpp
@@ -12,8 +11,10 @@ add_executable(${exeName} main.cpp)
 target_link_libraries(${exeName} PUBLIC infraLib dataBaseManagerLib)
 
 # For test covrage:
-target_compile_options(${exeName} PUBLIC -g -O0 -Wall -fprofile-arcs -ftest-coverage)
-target_link_options(${exeName} PUBLIC -fprofile-arcs -ftest-coverage)
+message(STATUS "setting additional compiler flags for unit testing:${unit_tests_compile_options}")
+message(STATUS "setting additional linker flags for unit testing:${unit_tests_link_options}")
+target_compile_options(${exeName} PUBLIC ${unit_tests_compile_options})
+target_link_options(${exeName} PUBLIC ${unit_tests_link_options})
 
 # Add the binary tree to the search path for include files
 # so that we will find sampleObj1.h
