--- a/src/infra/CMakeLists.txt
+++ b/src/infra/CMakeLists.txt
@@ -1,7 +1,7 @@
 # CMakeLists.txt file for the cpp11ThreadWrapper library
 # ======================================================
 set(libName "infraLib")
-
+include(../../globalDefines.cmake)
 add_library(${libName} cpp11ThreadWrapper.cpp)
 
 # In order to use the C++11 <thread> one needs to link against
@@ -9,7 +9,9 @@ add_library(${libName} cpp11ThreadWrapper.cpp)
 # to run on Linux machine, so link to pthread.
 target_link_libraries(${libName} pthread)
 
-target_compile_options(${libName} PUBLIC -g -O0 -Wall -fprofile-arcs -ftest-coverage)
-target_link_options(${libName} PUBLIC -fprofile-arcs -ftest-coverage)
+message(STATUS "setting additional compiler flags for unit testing:${unit_tests_compile_options}")
+message(STATUS "setting additional linker flags for unit testing:${unit_tests_link_options}")
+target_compile_options(${libName} PUBLIC ${unit_tests_compile_options})
+target_link_options(${libName} PUBLIC ${unit_tests_link_options})
 
 message(STATUS "CMakeLists.txt of ${libName} - created library")
