adding unit tests options flags settings in single location

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,10 +11,14 @@ add_executable(${exeName} main.cpp)
 target_link_libraries(${exeName} PUBLIC infraLib dataBaseManagerLib)
 
 # For test covrage:
-message(STATUS "setting additional compiler flags for unit testing:${unit_tests_compile_options}")
-message(STATUS "setting additional linker flags for unit testing:${unit_tests_link_options}")
-target_compile_options(${exeName} PUBLIC ${unit_tests_compile_options})
-target_link_options(${exeName} PUBLIC ${unit_tests_link_options})
+message("BUILD_UNIT_TESTS=${BUILD_UNIT_TESTS}")
+if( BUILD_UNIT_TESTS ) 
+    message("BUILD_UNIT_TESTS evaluates to True")
+    target_compile_options(${exeName} PUBLIC ${unit_tests_compile_options})
+    target_link_options(${exeName} PUBLIC ${unit_tests_link_options})
+    message(STATUS "setting additional compiler flags for unit testing:${unit_tests_compile_options}")
+    message(STATUS "setting additional linker flags for unit testing:${unit_tests_link_options}")
+endif()
 
 # Add the binary tree to the search path for include files
 # so that we will find sampleObj1.h
