--- a/src/infra/CMakeLists.txt
+++ b/src/infra/CMakeLists.txt
@@ -9,9 +9,13 @@ add_library(${libName} cpp11ThreadWrapper.cpp)
 # to run on Linux machine, so link to pthread.
 target_link_libraries(${libName} pthread)
 
-message(STATUS "setting additional compiler flags for unit testing:${unit_tests_compile_options}")
-message(STATUS "setting additional linker flags for unit testing:${unit_tests_link_options}")
-target_compile_options(${libName} PUBLIC ${unit_tests_compile_options})
-target_link_options(${libName} PUBLIC ${unit_tests_link_options})
+message("BUILD_UNIT_TESTS=${BUILD_UNIT_TESTS}")
+if( BUILD_UNIT_TESTS ) 
+    message("BUILD_UNIT_TESTS evaluates to True")
+    target_compile_options(${libName} PUBLIC ${unit_tests_compile_options})
+    target_link_options(${libName} PUBLIC ${unit_tests_link_options})
+    message(STATUS "setting additional compiler flags for unit testing:${unit_tests_compile_options}")
+    message(STATUS "setting additional linker flags for unit testing:${unit_tests_link_options}")
+endif()
 
-message(STATUS "CMakeLists.txt of ${libName} - created library")
+message(STATUS "End of CMakeLists.txt of ${libName} - created library")
