initial commit for the playground library for testing and poc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/src/dataBaseManager)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/tests)
 
+add_subdirectory(${PROJECT_SOURCE_DIR}/src/playground)
+
 add_subdirectory(src)
