--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,8 @@ message(STATUS "CMakeLists.txt of ${exeName} executable")
 # Add the executable which is of now, composed ONLY from the main.cpp
 add_executable(${exeName} main.cpp)
 
-# Libraries that we link against for sure
 target_link_libraries(${exeName} PUBLIC infraLib dataBaseManagerLib)
+target_link_libraries(${exeName} PRIVATE log4cxx)
 
 # For test covrage and debug runs in general
 message("BUILD_UNIT_TESTS=${BUILD_UNIT_TESTS}")
