--- a/src/infra/CMakeLists.txt
+++ b/src/infra/CMakeLists.txt
@@ -2,7 +2,7 @@
 # ======================================================
 set(libName "infraLib")
 include(../../globalDefines.cmake)
-add_library(${libName} cpp11ThreadWrapper.cpp)
+add_library(${libName} SHARED cpp11ThreadWrapper.cpp)
 
 # In order to use the C++11 <thread> one needs to link against
 # the respective "system threading library". The project intendent
