--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ message(STATUS "CMakeLists.txt of ${exeName} executable")
 # Add the executable which is of now, composed ONLY from the main.cpp
 add_executable(${exeName} main.cpp)
 
-target_link_libraries(${exeName} PUBLIC infraLib dataBaseManagerLib)
+target_link_libraries(${exeName} PUBLIC infraLib communicationLib)
 target_link_libraries(${exeName} PRIVATE log4cxx)
 
 # For test covrage and debug runs in general
@@ -28,5 +28,5 @@ endif()
 target_include_directories(${exeName} PUBLIC
                           "${PROJECT_BINARY_DIR}"
                           "${PROJECT_SOURCE_DIR}/src/infra/include"
-                          "${PROJECT_SOURCE_DIR}/src/dataBaseManager/include"
+                          "${PROJECT_SOURCE_DIR}/src/communication/include"
                           )
